Fix form-checkbox label wrap issue in ie11

--- a/sass/blocks/_finsight-form-checkbox.sass
+++ b/sass/blocks/_finsight-form-checkbox.sass
@@ -68,6 +68,10 @@ $block: ".finsight-form-checkbox"
     align-items: flex-start
     cursor: pointer
 
+    // Fix nowrap issue in IE11
+    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active)
+      display: block
+
     // $Common form checkbox input label MOD: adjust field
     // $Common form checkbox input label MOD: adjust field fluid
     &_adjust_field,
